--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,1 @@
-keywords=behind,near,above,opposite,opp.,in front of,next to,towards,around,beside
+keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,around,beside,below
