--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,5 @@
 keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,around,beside,below
+db_driver=org.postgresql.Driver
+db_url=jdbc:postgresql://localhost:5432/granite
+db_username=postgres
+db_password=password
