--- a/config.properties
+++ b/config.properties
@@ -2,4 +2,4 @@ keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,
 db_driver=org.postgresql.Driver
 db_url=jdbc:postgresql://localhost:5432/granite
 db_username=postgres
-db_password=upen
+db_password=password
