--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,5 @@ db_driver=org.postgresql.Driver
 db_url=jdbc:postgresql://localhost:5432/granite
 db_username=postgres
 db_password=upen
+equipment_type=WIFI-ACCESS POINT:SC-WiFi Combo
+equipment_status=COMMISSIONED
