--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,6 @@ keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,
 db_driver=org.postgresql.Driver
 db_url=jdbc:postgresql://localhost:5432/granite
 db_username=postgres
-db_password=upen
+db_password=password
 equipment_type=WIFI-ACCESS POINT:SC-WiFi Combo
-equipment_status=COMMISSIONED
+equipment_status=COMMISSIONED:IN SERVICE
