--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,10 @@ db_username=postgres
 db_password=password
 equipment_type=WIFI-ACCESS POINT:SC-WiFi Combo
 equipment_status=COMMISSIONED:IN SERVICE
+category=JioHotSpots
+sub_category=Wifi
+radius=10
+wifi_device_codes=I16:I26:I36:15N:15U:OAP:R50:T30:T31:C75:O70:72E:35P:37P:C85:SCG:i17:31S:W68:O90
+wifi_indoor=I16:I26:I36:C75:35P:37P:C85:SCG:i17:W68:R50
+wifi_outdoor=15N:15U:OAP:T30:T31:O70:72E:31S:O90
+image_reference= 
