--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="E:/Java Development/CAV1/trunk/lib/antlr-r13.jar"/>
-	<classpathentry kind="lib" path="E:/Java Development/CAV1/trunk/lib/opencsv-3.8.jar"/>
-	<classpathentry kind="lib" path="E:/Java Development/CAV1/trunk/lib/postgresql-9.3-1103.jdbc3.jar"/>
-	<classpathentry kind="lib" path="E:/Java Development/CAV1/trunk/lib/quartz-2.1.7.jar"/>
-	<classpathentry kind="lib" path="E:/Java Development/CAV1/trunk/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/CAV/trunk/lib/antlr-r13.jar"/>
+	<classpathentry kind="lib" path="D:/CAV/trunk/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/CAV/trunk/lib/opencsv-3.8.jar"/>
+	<classpathentry kind="lib" path="D:/CAV/trunk/lib/postgresql-9.3-1103.jdbc3.jar"/>
+	<classpathentry kind="lib" path="D:/CAV/trunk/lib/quartz-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
