--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,11 @@
 keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,around,beside,below
 db_driver=org.postgresql.Driver
-db_url=jdbc:postgresql://localhost:5432/granite 
-db_username=postgres
-db_password=password
+db_url_lbs=jdbc:postgresql://localhost:5432/granite 
+db_username_lbs=postgres
+db_password_lbs=password
+db_url_integration=jdbc:postgresql://localhost:5432/granite 
+db_username_integration=postgres
+db_password_integration=password
 equipment_type=WIFI-ACCESS POINT:SC-WiFi Combo
 equipment_status=COMMISSIONED:IN SERVICE
 category=JioHotSpots
@@ -12,4 +15,4 @@ wifi_device_codes=I16:I26:I36:15N:15U:OAP:R50:T30:T31:C75:O70:72E:35P:37P:C85:SC
 wifi_indoor=I16:I26:I36:C75:35P:37P:C85:SCG:i17:W68:R50
 wifi_outdoor=15N:15U:OAP:T30:T31:O70:72E:31S:O90
 image_reference= 
-granite_file_path=D:/CAV/trunk
+granite_file_path=E:/Java Development/CAV1/trunk
