--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,8 @@
 keywords=behind,near,above,opposite,opp,opp.,opp to,in front of,next to,towards,around,beside,below
 db_driver=org.postgresql.Driver
-db_url_lbs=jdbc:postgresql://10.135.9.223:5433/prod_middleware 
+db_url_lbs=jdbc:postgresql://localhost:5432/granite 
 db_username_lbs=postgres
-db_password_lbs=rjilpg@14
+db_password_lbs=password
 db_url_integration=jdbc:postgresql://localhost:5432/granite 
 db_username_integration=postgres
 db_password_integration=password
@@ -15,5 +15,6 @@ wifi_device_codes=I16:I26:I36:15N:15U:OAP:R50:T30:T31:C75:O70:72E:35P:37P:C85:SC
 wifi_indoor=I16:I26:I36:C75:35P:37P:C85:SCG:i17:W68:R50
 wifi_outdoor=15N:15U:OAP:T30:T31:O70:72E:31S:O90
 image_reference= 
-granite_file_path=D:/CAV/trunk
-header_structure=EQUIPMENT_STATUS:DEVICE_CODE:FACILITY_ID:MODIFIED_DATE_TIME:FULL_ADDRESS:COUNTRY:PINCODE:EQUIP_REF_NAME:FLOOR:BSSID:AP_GROUP_NAME:EQUIPMENT_ID:RJ_EQUIPME_RJID:	SITE_NAME:SITE_ID:SAP_ID:SITE_LOCATION:GIS_LAT:GIS_LONG:R4G_STATE:CIRCLE:CITY_CODE:CITY_NAME:CITY_RANK:BUSINESS_RANK:AREA:EQUIPMENT_TYPE:EQUIPMENT_MODEL:EQUIPMENT_DEVICE_CODE:	ACCESS_POINT_MAKE:ACCESS_POINT_MODEL:EQUIPEMENT_HW_TYPE
+granite_file_path=E:/Java Development/CAV1/trunk
+header_structure=EQUIPMENT_STATUS:DEVICE_CODE:FACILITY_ID:MODIFIED_DATE_TIME:FULL_ADDRESS:COUNTRY:PINCODE:EQUIP_REF_NAME:FLOOR:BSSID:AP_GROUP_NAME:EQUIPMENT_ID:RJ_EQUIPME_RJID:SITE_NAME:SITE_ID:SAP_ID:SITE_LOCATION:GIS_LAT:GIS_LONG:R4G_STATE:CIRCLE:CITY_CODE:CITY_NAME:CITY_RANK:BUSINESS_RANK:AREA:EQUIPMENT_TYPE:EQUIPMENT_MODEL:EQUIPMENT_DEVICE_CODE:ACCESS_POINT_MAKE:ACCESS_POINT_MODEL:EQUIPEMENT_HW_TYPE
+cron_statement=0/30 * * * * ?
