--- a/config.properties
+++ b/config.properties
@@ -17,4 +17,4 @@ wifi_outdoor=15N:15U:OAP:T30:T31:O70:72E:31S:O90
 image_reference= 
 granite_file_path=E:/Java Development/CAV1/trunk
 header_structure=EQUIPMENT_STATUS:DEVICE_CODE:FACILITY_ID:MODIFIED_DATE_TIME:FULL_ADDRESS:COUNTRY:PINCODE:EQUIP_REF_NAME:FLOOR:BSSID:AP_GROUP_NAME:EQUIPMENT_ID:RJ_EQUIPME_RJID:SITE_NAME:SITE_ID:SAP_ID:SITE_LOCATION:GIS_LAT:GIS_LONG:R4G_STATE:CIRCLE:CITY_CODE:CITY_NAME:CITY_RANK:BUSINESS_RANK:AREA:EQUIPMENT_TYPE:EQUIPMENT_MODEL:EQUIPMENT_DEVICE_CODE:ACCESS_POINT_MAKE:ACCESS_POINT_MODEL:EQUIPEMENT_HW_TYPE
-cron_statement=0/30 * * * * ?
+cron_statement=< 0/30 * * * * ? >
