--- a/config.properties
+++ b/config.properties
@@ -18,3 +18,6 @@ image_reference=
 granite_file_path=E:/Java Development/CAV1/trunk
 header_structure=EQUIPMENT_STATUS:DEVICE_CODE:FACILITY_ID:MODIFIED_DATE_TIME:FULL_ADDRESS:COUNTRY:PINCODE:EQUIP_REF_NAME:FLOOR:BSSID:AP_GROUP_NAME:EQUIPMENT_ID:RJ_EQUIPME_RJID:SITE_NAME:SITE_ID:SAP_ID:SITE_LOCATION:GIS_LAT:GIS_LONG:R4G_STATE:CIRCLE:CITY_CODE:CITY_NAME:CITY_RANK:BUSINESS_RANK:AREA:EQUIPMENT_TYPE:EQUIPMENT_MODEL:EQUIPMENT_DEVICE_CODE:ACCESS_POINT_MAKE:ACCESS_POINT_MODEL:EQUIPEMENT_HW_TYPE
 cron_statement=< 0/30 * * * * ? >
+google_key=AIzaSyDyjlp97xwjxcy5bmiBvbJC1CflIYDtbZc
+http_connection_timeout=5000
+http_socket_timeout=5000
