--- a/.classpath
+++ b/.classpath
@@ -2,18 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/antlr-r13.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/gson-2.8.0.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/logback-core-1.0.13.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/opencsv-3.8.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/org-apache-commons-logging.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/postgresql-9.3-1103.jdbc3.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/quartz-2.1.7.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/slf4j.api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/JavaDevelopment/Granite1/Granite/lib/slf4j-simple-1.6.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/antlr-r13.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/logback-core-1.0.13.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/opencsv-3.8.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/org-apache-commons-logging.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/postgresql-9.3-1103.jdbc3.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/quartz-2.1.7.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/slf4j.api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="E:/Java Development/Granite1/Granite/lib/slf4j-simple-1.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
